# crisis-tweet-benchmark

./: .gitignore  PHASE0_REPORT.md  PHASE1_5_REPORT.md  PHASE1_REPORT.md  PHASE2_REPORT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: crisislex.yaml  experiments.yaml  kaggle.yaml
configs/final/: README.md  bilstm.yaml  conv1d.yaml  distilbert_finetune.yaml  gru.yaml  lstm.yaml  meanpool_embed.yaml  tfidf_logreg.yaml  use_frozen.yaml
configs/protocol_a/: bilstm.yaml  conv1d.yaml  distilbert_finetune.yaml  gru.yaml  lstm.yaml  meanpool_embed.yaml  tfidf_logreg.yaml  tfidf_mnb.yaml  use_frozen.yaml
configs/tuning/: bilstm.yaml  conv1d.yaml  distilbert_finetune.yaml  gru.yaml  lstm.yaml  meanpool_embed.yaml  tfidf_logreg.yaml  tfidf_mnb.yaml  use_frozen.yaml
data/crisislex/: dropped_conflicting.csv  manifest.json
data/kaggle/: dropped_conflicting.csv  manifest.json
docs/: COLAB.md  DATASETS.md  DECISIONS.md  PLAN.md  PROTOCOL.md
results/: ledger.jsonl
scripts/: make_tables.py  merge_ledger.py  precompute_use.py  prepare_crisislex.py  prepare_kaggle.py  run_floor_baselines.py  run_matrix.py  select_configs.py
src/dtc/data/: common.py  crisislex.py  kaggle.py  loaders.py  protocol_a.py  text.py  use_cache.py
src/dtc/eval/: frozen_test_loader.py  metrics.py  run_evaluation.py
src/dtc/harness/: config.py  fractions.py  ledger.py  run.py
src/dtc/models/: base.py  distilbert_finetune.py  floor_baselines.py  neural_sequence.py  registry.py  tfidf_models.py  torch_common.py  use_frozen.py
tests/: test_crisislex_pipeline.py  test_floor_baselines.py  test_fractions.py  test_frozen_test_guard.py  test_harness_ledger.py  test_kaggle_pipeline.py  test_make_tables.py  test_merge_ledger.py  test_metrics.py  test_models_registry.py  test_models_units.py  test_precompute_use.py  test_protocol_isolation.py  test_run_evaluation.py  test_run_matrix.py  test_select_configs.py  test_smoke.py  test_text_preprocessing.py  test_torch_common.py
