[project]
name = "dtc"
version = "0.1.0"
description = "Controlled re-evaluation of text-classification architectures for disaster tweet detection."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dtc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
