[project]
name = "dtc"
version = "0.1.0"
description = "Controlled re-evaluation of text-classification architectures for disaster tweet detection."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "torch>=2.12.1",
    "transformers>=5.13.0",
]

[project.optional-dependencies]
tf = [
    "tensorflow>=2.21.0",
    "tensorflow-hub>=0.16.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dtc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: exercises a real pretrained-model download/train (e.g. DistilBERT)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
